@@ -15,3 +15,11 @@ BlueXP 데이터 인프라 관리에 있어서의 역할을 더 잘 반영하도
 VMware 워크로드 계획 센터를 사용하면 한 곳에서 VM 인벤토리와 마이그레이션 계획을 보고 관리할 수 있습니다.  다양한 환경에서 여러 VM 인벤토리를 업로드하고 저장할 수 있으며, 그 중 하나를 AWS EC2 또는 Amazon Elastic VMware 서비스로 마이그레이션할 계획을 세울 수 있습니다.  AWS EC2 또는 EVS 마이그레이션 계획을 만들고 저장할 수도 있습니다.
 
 https://docs.netapp.com/us-en/workload-vmware/explore-planning-center.html["VMware 워크로드 계획 센터 탐색"]
+
+
+
+=== Amazon Elastic VMWare Service에 대한 마이그레이션 어드바이저 지원 소개
+
+VMware용 BlueXP Workload Factory를 사용하면 이제 Amazon Elastic VMware Service 마이그레이션 어드바이저를 사용하여 온프레미스 VMware 워크로드를 Amazon Elastic VMware Service로 빠르게 마이그레이션할 수 있습니다.  마이그레이션 어드바이저를 사용하여 마이그레이션 계획을 생성하면 해당 계획은 계획 센터의 마이그레이션 계획 목록에 자동으로 저장됩니다.
+
+https://docs.netapp.com/us-en/workload-vmware/launch-migration-advisor-evs.html["마이그레이션 어드바이저를 사용하여 Amazon EVS에 대한 배포 계획을 만듭니다."]
