@@ -33,13 +33,21 @@ https://docs.netapp.com/us-en/workload-vmware/explore-planning-center.html["VMwa
 
 
 
+=== Amazon Elastic VMWare Service에 대한 마이그레이션 어드바이저 지원 소개
+
+VMware용 BlueXP Workload Factory를 사용하면 이제 Amazon Elastic VMware Service 마이그레이션 어드바이저를 사용하여 온프레미스 VMware 워크로드를 Amazon Elastic VMware Service로 빠르게 마이그레이션할 수 있습니다.  마이그레이션 어드바이저를 사용하여 마이그레이션 계획을 생성하면 해당 계획은 계획 센터의 마이그레이션 계획 목록에 자동으로 저장됩니다.
+
+https://docs.netapp.com/us-en/workload-vmware/launch-migration-advisor-evs.html["마이그레이션 어드바이저를 사용하여 Amazon EVS에 대한 배포 계획을 만듭니다."]
+
+
+
 == 2025년 8월 3일
 
 
 
 === Amazon Elastic VMWare Service에 대한 향상된 마이그레이션 어드바이저 지원
 
-Amazon Elastic VMware Service 마이그레이션 어드바이저는 이제 Amazon FSx for NetApp ONTAP 파일 시스템의 자동 배포 및 마운트를 지원합니다.  이를 통해 Amazon EVS 환경으로의 마이그레이션이 완료되면 FSx for ONTAP 파일 시스템에 VM 배포를 시작할 수 있습니다.
+NetApp Workload Factory는 이제 Amazon FSx for NetApp ONTAP 파일 시스템의 자동 배포 및 마운트를 지원합니다.  이를 통해 Amazon EVS 환경으로의 마이그레이션이 완료되면 FSx for ONTAP 파일 시스템에 VM 배포를 시작할 수 있습니다.
 
 https://docs.netapp.com/us-en/workload-vmware/launch-migration-advisor-evs-manual.html["마이그레이션 어드바이저를 사용하여 Amazon EVS에 대한 배포 계획을 만듭니다."]
 
@@ -59,7 +67,7 @@ https://docs.netapp.com/us-en/workload-vmware/calculate-evs-savings.html["BlueXP
 
 === Amazon Elastic VMWare Service에 대한 마이그레이션 어드바이저 지원 소개
 
-VMware용 BlueXP Workload Factory는 이제 Amazon Elastic VMware Service를 지원합니다.  마이그레이션 어드바이저를 사용하면 온프레미스 VMware 워크로드를 Amazon Elastic VMware Service로 빠르게 마이그레이션하여 비용을 최적화하고 애플리케이션을 리팩토링하거나 플랫폼을 재구축할 필요 없이 VMware 환경을 더 효과적으로 제어할 수 있습니다.
+VMware용 BlueXP Workload Factory는 이제 Amazon Elastic VMware Service를 지원합니다. 온프레미스 VMware 워크로드를 Amazon Elastic VMware Service로 수동으로 마이그레이션하여 비용을 최적화하고 애플리케이션을 리팩토링하거나 플랫폼을 재구축할 필요 없이 VMware 환경을 더 효과적으로 제어할 수 있습니다.
 
 https://docs.netapp.com/us-en/workload-vmware/launch-migration-advisor-evs-manual.html["마이그레이션 어드바이저를 사용하여 Amazon EVS에 대한 배포 계획을 만듭니다."]
 
